Fix TAB key causing all wizard panels to be visible

--- a/src/BlazorWizardDemo/wwwroot/app.css
+++ b/src/BlazorWizardDemo/wwwroot/app.css
@@ -199,6 +199,11 @@ label {
     box-sizing: border-box;
 }
 
+.wizard-panel.moving-out-backward,
+.wizard-panel.moving-out-forward {
+    visibility: hidden;
+}
+
 .wizard-panel.moving-out-backward {
     transform: translateX(-100%);
 }
